--- a/mr4a11y/retranscription.html
+++ b/mr4a11y/retranscription.html
@@ -61,7 +61,40 @@
                         <div id="intro">
                             <h1>Retranscription</h1>
                             <span>
-
+                                Le titre principal s'affiche : "Sensibilisation des lycéens aux handicaps et à
+                                l'accessibilité".
+                                <br>Guy Clergue, adjoint au maire délégué à l'accessibilité et handicap prend la parole
+                                :
+                                <br>- On renouvelle cette journée de sensibilisation au handicap pour ressentir la
+                                différence et qu'on arrive à percevoir le handicap autrement que l'appeler handicap,
+                                voilà, plutôt le partage de cette différence.
+                                <br>Dans le fond, des lycéens tentent d'utiliser une chaîne roulante afin de se
+                                déplacer.
+                                <br>Celui qui semble s'occuper de l'activité apprend à un lycéen à s'en servir :
+                                <br>- C'est toi qui dirige ton fauteil pour aller tout droit, voilà, tu te redresses et
+                                tu diriges ton fauteuil.
+                                <br>Ce lycéen prend la parole en interview :
+                                <br>- Je prends conscience de la difficulté du mouvement des handicapés, et de ce qui
+                                est
+                                difficile avec les aménagements urbains, c'est pas toujours facile.
+                                <br>Julien Calmont, président du Handicap Athlétic Narbonne Méditerrannée, prend la
+                                parole, on se rend compte que c'était lui qui dispensait les apprentissages aux lycéens.
+                                <br>- Les jeunes sont toujours en quesionnement sur le handicap, c'est vrai que c'est
+                                quelque chose de différent, et de leur présenter, de les mettre en situation, leur faire
+                                prendre en conscience eux-mêmes des difficultés qu'il y a sur les contraintes urbaines,
+                                mais aussi pour fermer une porte, et vraiment ils ont une bonne réaction et se rendent
+                                vraiment compte des difficultés du quotidien quand on se déplace en fauteuil roulant. Et
+                                je trouve que la ville de Narbonne mets vraiment beaucoup mais beaucoup d'atouts pour
+                                que nos futurs citoyens soient sensibilisés au handicap.
+                                <br>Des lycéens sont interviewés sur le lieu de l'évènement :
+                                <br>- On se rend compte que dans la vie de tous les jours, bah c'est pas évident pour
+                                eux, on s'en rend pas forcément compte quand on les voit dans la rue. On a déjà eu du
+                                mal en dix minutes, à être sur un fauteuil roulant et à devoir le manoeuvrer, mais toute
+                                une vie, tout le temps, dans une ville, sur différents terrains, ça doit vraiment pas
+                                être évident et franchement je les respecte.
+                                <br>Musique de fin, un lien reconduit sur le
+                                <a href="https://www.narbonne.fr">site de la ville de Narbonne</a>.
+                                <br><br>
                             </span>
                         </div>
                     </div>
