--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -40,7 +40,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#intro">Introduction</a>
-              <a class="dropdown-item" href="#use-case">User Story</a>
+              <a class="dropdown-item" href="#use-case">Media</a>
             </div>
           </li>
 
