--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -39,9 +39,8 @@
               ACCUEIL
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#intro">INTRODUCTION</a>
-              <a class="dropdown-item" href="#use-case">
-                CAS D'UTILISATION</a>
+              <a class="dropdown-item" href="#intro">Introduction</a>
+              <a class="dropdown-item" href="#use-case">Video</a>
             </div>
           </li>
 
