css + en savoir plus (droite)

--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="main_fr.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/Education.png">
@@ -66,14 +66,17 @@
             <div class="container2" id="module1">
               <h3>Centre National d'Enseignement à Distance</h3>
               <p aria-expanded="false">
-                Le CNED (Centre national d'enseignement à distance) est probablement le plus grand établissement public
-                du ministère de l’éducation national pour ce qui est des formations à distance. Il offre depuis 1939 un
+                Le CNED (Centre national d'enseignement à distance) est probablement le plus grand établissement
+                public
+                du ministère de l’éducation national pour ce qui est des formations à distance. Il offre depuis 1939
+                un
                 service d’enseignement par correspondance pour répondre aux besoins du pays qui vient d'entrer dans la
                 Seconde Guerre mondiale.
                 <br>
                 C’est en 1997 que le CNED fait son entrée sur internet.
                 L'établissement numérique devient évidemment un atout pour les personnes en situation de handicape. En
-                effet, que ce soit pour des problèmes dû directement à l'établissement (structure non adaptée, personnel
+                effet, que ce soit pour des problèmes dû directement à l'établissement (structure non adaptée,
+                personnel
                 accompagnant manquant etc.) ou pour des problèmes externes (transport jusqu’à l'établissement par
                 exemple), les établissements scolaires ne sont, encore aujourd’hui, pas toujours accessibles.
                 <br>
@@ -83,7 +86,8 @@
                     alt="Les clés de la réussite"></span>
                 En 2013, le CNED signe une convention avec le FIPHFP (Fonds pour l'insertion des personnes handicapées
                 dans la fonction publique) afin de rendre leur site accessible à tous, professeurs et élèves. Le 3
-                septembre 2021, date de la dernière mise à jour de leur déclaration d’accessibilité, le site respectait
+                septembre 2021, date de la dernière mise à jour de leur déclaration d’accessibilité, le site
+                respectait
                 75% des critères du RGAA version 4.1 pour les parties sans espace personnel et seulement 59% pour les
                 parties connectées. C’est un point important à régler afin de garantir les mêmes chances de réussite à
                 tous. On peut noter que chaque année, le site met sa déclaration à jour et qu’ils continuent leur plan
@@ -94,34 +98,30 @@
 
           <div style="width: 45% ; height: 100% ; float: left ; margin-left: 70px;" tabindex="0">
             <div class="container2" id="module2">
-              <h3>Comment la réalité mixte peut aider les personnes handicapées</h3>
+              <h3>Le projet EyeSchool</h3>
               <div aria-expanded="false">
-                Selon des chercheurs et d'autres experts en technologie, il est possible d'utiliser la technologie AR et
-                VR pour améliorer la qualité des personnes handicapées.
-                La réalité virtuelle peut potentiellement aider les personnes handicapées de différentes manières.
-                <ol class="list">
-                  <li>Éducation</li>
-                  Dans une de ces études, les chercheurs ont utilisé des programmes de formation en réalité virtuelle
-                  pour enseigner aux enfants autistes comment traverser les routes en toute sécurité. Après un exercice
-                  d'un mois, les chercheurs ont établi que la formation en réalité virtuelle améliorait considérablement
-                  la capacité des enfants à traverser la route.
-                  <li>Itinéraire</li>
-                  En visitant de nouveaux endroits, il est souvent difficile pour les personnes handicapées physiques de
-                  planifier des itinéraires à emprunter autour d'une ville. La réalité virtuelle peut aider à fournir un
-                  environnement simulé de la ville et ainsi permettre à la personne handicapée d'avoir une idée de la
-                  ville et de s'habituer aux itinéraires les plus accessibles à emprunter.
-                  <li>Récupération Musculaire</li>
-                  La réalité virtuelle est également utile pour aider les personnes qui ont souffert d'accidents
-                  vasculaires cérébraux ou de blessures liées au sport et même de problèmes du système vestibulaire à
-                  améliorer leurs capacités motrices et à aider à la récupération musculaire. Selon les recherches, même
-                  le fait d'imaginer que l'on est en train d'effectuer une activité suffit à stimuler les parties
-                  pertinentes du cerveau nécessaires à cette activité.
-                  <li>Malvoyant</li>
-                  Certaines conditions telles que la maladie de Stargardt peuvent entraîner une déficience visuelle sous
-                  la forme d'une vision centrale détaillée réduite. Cependant, la recherche a établi qu'il est possible
-                  d'utiliser la RV pour aider les personnes ayant de telles déficiences visuelles à voir les images avec
-                  plus de clarté.
-                </ol>
+                Pour les citer, EyeSchool est “le premier dispositif numérique nomade pour l'accès à la lecture,
+                l'écriture et la prise de note des personnes déficientes sensorielles ou des élèves présentant des
+                troubles sévères du langage (Dys) dans un parcours d'éducation et de formation professionnelle.”
+                <br>
+                Ce dispositif facilite l'accès aux informations écrites au tableau ainsi que la prise de notes. Il est
+                composé d’un ordinateur portable, un tout petit scanner, une caméra et une barre de capture numérique
+                fixée au tableau.
+                <span id="img"><img class="img-responsive" src="assets/access_school.png"
+                    alt="L'école accessible"></span>
+                <br>
+                La caméra filme le tableau ou n’importe quel élément que l’élève n'arrive pas à voir et le diffuse sur
+                l’écran de l'ordinateur en zoomant ou en adaptant selon les besoins de l’enfant (inversions des
+                couleurs, augmentation des contrastes etc.). Le scanner permet de retranscrire n’importe quel document
+                papier sur l’ordinateur, permettant les fonctionnalités précédemment citées mais aussi la lecture par un
+                synthétiseur vocal. Le logiciel d’aide à la vision Portanum, conçu initialement par Thales Mission
+                Insertion, possède d’ailleurs un menu vocalisé permettant l'utilisation de EyeSchool par les
+                non-voyants. La barre de capture numérique sert quant à elle à capter les mouvements de la main qui
+                écrit et les retranscrire sur l’ordinateur de l’élève.
+                <br>
+                Ce dispositif est d’une importance capitale pour la scolarisation des élèves en situation de handicap.
+                En effet, il pourrait permettre à ces enfants d’étudier avec tous les autres sans avoir besoin
+                d’assistance constante. EyeSchool est commercialisé depuis 2014.
               </div>
             </div>
           </div>
