--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/Education.png">
@@ -96,31 +96,28 @@
 
           <div style="width: 45% ; height: 100% ; float: left ; margin-left: 70px;" tabindex="0">
             <div class="container2" id="module2">
-              <h3>How Mixed Reality can Help Disabled People</h3>
+              <h3>The EyeSchool Project</h3>
               <div aria-expanded="false">
-                There are many ways through which mixed reality can potentially help the disabled.
-                According to researchers and other technology experts, it is possible to use mixed reality to improve
-                the quality of life for disabled people.
-                <ol class="list">
-                  <li>Education</li>
-                  Researchers have recently used virtual reality training programs to teach autistic children how to
-                  cross the roads safely. The research showed that after a month-long exercise, researchers established
-                  that virtual reality training significantly improved the ability of the children to cross the road.
-                  <li>Navigating</li>
-                  It is often complex, when visiting new places, for physically disabled people to navigate or find
-                  their ways around a city. Virtual reality can help provide a simulated environment of the city and
-                  thus allow the disabled individual to have a feel of the city and get used to the most accessible
-                  routes to use.
-                  <li>Muscle Recovery</li>
-                  Virtual reality is also useful in helping people who have suffered from strokes or sports-related
-                  injuries and even vestibular system issues to improve their motor skills and help in muscle recovery.
-                  According to research even the act of imagining that one is performing an activity is enough to
-                  stimulate the relevant parts of the brain needed to perform the activity.
-                  <li>Low Vision</li>
-                  Some conditions such as Stargardt’s disease can lead to visual impairment in the form of reduced
-                  central detailed vision. However, research has established that it is possible to use VR to help
-                  people with such visual disabilities see images with greater clarity.
-                </ol>
+                To quote them, EyeSchool is “the first nomadic digital device for access to reading, writing and note
+                taking for people with sensory disabilities or students with severe language disorders (Dys) in an
+                educational course and vocational training.”
+                <br>
+                This device facilitates access to information written on the board as well as note taking. It consists
+                of a laptop, a very small scanner, a camera and a digital capture bar attached to the board.
+                <span id="img"><img class="img-responsive" src="assets/access_school.png"
+                    alt="The accessible school"></span>
+                <br>
+                The camera films the painting or any element that the student cannot see and displays it on the computer
+                screen by zooming or adapting it according to the child's needs (inversion of colors, increase contrasts
+                etc). The scanner makes it possible to transcribe any paper document on the computer, allowing the
+                previously mentioned functionalities but also reading by a voice synthesizer. The Portanum vision
+                assistance software, originally designed by Thales Mission Insertion, also has a vocalized menu allowing
+                the use of EyeSchool by the blind. The digital capture bar is used to capture the movements of the
+                writing hand and transcribe them on the student's computer.
+                <br>
+                This system is of paramount importance for the education of students with disabilities. Indeed, it could
+                allow these children to study with all the others without the need for constant assistance. EyeSchool
+                has been on the market since 2014.
               </div>
             </div>
           </div>
