--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="main_fr.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -104,7 +104,7 @@
       <div class="row">
         <div class="col" tabindex="0">
           <div id="intro">
-            <h1>Qu'est-ce que la réalité mixte</h1>
+            <h1>Introduction</h1>
             <span>Les acronymes AR et VR ont été lancés dans de nombreuses conversations
               dans l'industrie de la technologie depuis quelques années,
               et vous pouvez ou non savoir ce qu'ils représentent ou le pouvoir que
@@ -146,12 +146,8 @@
                 mouvement, l'angle de mouvement et la direction du mouvement nécessaire pour l'interaction. </li>
             </ul>
             <div id="use-case">
-              <h1>Exemple de cas d'utilisation</h1>
-              <div>Il existe un potentiel pour les personnes ayant une déficience visuelle particulière,
-                comme la maladie de Stargardt (une réduction de la vision centrale détaillée)
-                pour voir les images plus clairement en utilisant la VR. Cette vidéo montre comment une femme a pu
-                d'utiliser l'aide augmentée VR de près pour voir son petit-enfant plus clairement, après huit ans avec
-                une vision limitée.
+              <h1>Contenu vidéo</h1>
+              <div>Voici
               </div>
               <div class="iframe-container">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KPbD3lm5vao?start=9"
