--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -101,7 +101,7 @@
       <div class="row">
         <div class="col" tabindex="0">
           <div id="intro">
-            <h1>What Is Mixed Reality</h1>
+            <h1>Introduction</h1>
             <span>Augmented Reality and Virtual Reality are similar in many ways,
               both help us creating artificial digital worlds and allowing the user to interact with it.
               The acronyms AR and VR have been used in many conversations
