--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -61,7 +61,7 @@
     <section id="blog" tabindex="0">
 
       <div class="container1">
-        <h1>Accessibility of distance learning</h1>
+        <h1>Some digital advances</h1>
         <div class="row">
 
           <div style="width: 45% ; height: 10% ; float: left ;margin-left: 40px;" tabindex="0">
