--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sources_fr.html">SOURCES</a>
+            <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
         </ul>
         <div>
@@ -59,7 +59,7 @@
     <section id="blog" tabindex="0">
 
       <div class="container1">
-        <h1>L'accessibilité des cours à distance</h1>
+        <h1>Quelques avancées numérques</h1>
         <div class="row">
 
           <div style="width: 45% ; height: 10% ; float: left ;margin-left: 40px;" tabindex="0">
