--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sources_fr.html">SOURCES</a>
+            <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
           <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img
               src="assets/british flag.png" alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch
