--- a/mr4a11y/sources.html
+++ b/mr4a11y/sources.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -15,38 +15,39 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
-  <title>Contact Us</title>
+  <title>Nous Contacter</title>
 </head>
 
 <body>
   <header role="banner">
-    <nav role="navigation" aria-label="Main Menu" class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
-      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Website Logo (Back
-              to Home)"></a>
+    <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
+      id="nav-bar">
+
+      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Logo site (retour
+              à l'accueil)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Basculer la navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-
           <li class="nav-item">
-            <a class="nav-link" href="index.html">HOME</a>
+            <a class="nav-link" href="index_fr.html">ACCUEIL</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="explore.html">LEARN MORE</a>
+            <a class="nav-link" href="explore_fr.html">EN SAVOIR PLUS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html">CONTACT US</a>
+            <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sources.html">SOURCES</a>
+            <a class="nav-link" href="sources_fr.html">SOURCES</a>
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" lang="en" hreflang="en" href="sources_fr.html"><img src="assets/french flag.jpg"
-              alt="French flag to switch the language" width="20" height="20"> Passer en Français</a>
+          <a class="btn btn-link" lang="fr" hreflang="fr" href="sources.html"><img src="assets/british flag.png"
+              alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch to English</a>
         </div>
       </div>
     </nav>
@@ -55,16 +56,24 @@
 
         <div class="container1">
           <h1>Sources</h1>
-          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-
-
-
+          <h3><a
+              href="https://www.education.gouv.fr/la-scolarisation-des-eleves-en-situation-de-handicap-1022#:~:text=Le%20droit%20%C3%A0%20l'%C3%A9ducation%20pour%20tous%20les%20enfants%2C%20qu,handicap%2C%20est%20un%20droit%20fondamental.&text=L'%C3%A9l%C3%A8ve%20en%20situation%20de%20handicap%20est%20un%20%C3%A9l%C3%A8ve%20comme,%C3%AAtre%20soumis%20aux%20m%C3%AAmes%20exigences"
+              style="text-align: center; ">education.gouv -> La scolarisation des élèves en situation de handicap</a>
+          </h3>
+          <h3><a href="https://www.education.gouv.fr/accessibilite-numerique-le-cned-et-le-fiphfp-s-engagent-1790"
+              style="text-align: center; ">education.gouv -> Accessibilité numérique : le CNED et le FIPHFP
+              s'engagent</a>
+          </h3>
+          <h3><a
+              href="https://www.onisep.fr/Formation-et-handicap/Se-faire-accompagner/Handicap-et-vie-quotidienne/L-acces-au-numerique-pour-tous#:~:text=Les%20ressources%20num%C3%A9riques%20sont%20devenues,scolaire%20et%20l%27insertion%20professionnelle"
+              style="text-align: center; ">onisep.fr -> L'accès au numérique pour tous</a></h3>
+          <h3><a href="https://vimeo.com/151028546" style="text-align: center; ">vimeo.com -> Eyeschool film de 5
+              minutes</a></h3>
+          <h3><a href="http://www.eyeschool.fr/" style="text-align: center; ">http://www.eyeschool.fr/</a></h3>
+          <h3><a
+              href="https://www.thalesgroup.com/fr/worldwide/groupe/press-release/thales-et-le-centich-deploient-grande-echelle-la-solution-eyeschool"
+              style="text-align: center; ">thalesgroup.com -> Thalès et le CENTICH déploient à grande échelle la
+              solution Eyeschool dans 4 régions françaises</a></h3>
         </div>
       </section>
     </main>
@@ -77,8 +86,8 @@
       </div>
     </footer>
 
-
   </header>
+
 </body>
 
 </html>
