--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sources_fr.html">SOURCES</a>
+            <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
         </ul>
         <div>
