--- a/mr4a11y/sources.html
+++ b/mr4a11y/sources.html
@@ -45,10 +45,10 @@
             <a class="nav-link" href="sources_fr.html">SOURCES</a>
           </li>
         </ul>
-        <div>
+        <!---<div>
           <a class="btn btn-link" lang="fr" hreflang="fr" href="sources.html"><img src="assets/british flag.png"
               alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch to English</a>
-        </div>
+        </div>-->
       </div>
     </nav>
     <main role="main">
