--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -48,7 +48,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
+            <a class="nav-link" href="contact_fr.html">NOUS CONTACTER</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sources.html">SOURCES</a>
