--- a/mr4a11y/sources.html
+++ b/mr4a11y/sources.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="explore_fr.html">EN SAVOIR PLUS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
+            <a class="nav-link" href="contact_fr.html">NOUS CONTACTER</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sources_fr.html">SOURCES</a>
