switch language css

--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" lang="en" hreflang="en" href="Contact_fr.html"><img src="assets/french flag.jpg"
+          <a class="btn btn-link" lang="en" hreflang="en" href="contact_fr.html"><img src="assets/french flag.jpg"
               alt="French flag to switch the language" width="20" height="20"> Passer en Français</a>
         </div>
 
