--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -46,8 +46,9 @@
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" lang="fr" hreflang="fr" href="Contact.html"><img src="assets/british flag.png"
-              alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch to English</a>
+          <a class="btn btn-link" id="switchLang" lang="fr" hreflang="fr" href="contact.html"><img
+              src="assets/british flag.png" alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch
+            to English</a>
         </div>
       </div>
     </nav>
