switch to english

--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -45,8 +45,9 @@
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" lang="en" hreflang="en" href="contact_fr.html"><img src="assets/french flag.jpg"
-              alt="French flag to switch the language" width="20" height="20"> Passer en Français</a>
+          <a class="btn btn-link" id="switchLang" lang="en" hreflang="en" href="contact_fr.html"><img
+              src="assets/french flag.jpg" alt="French flag to switch the language" width="20" height="20"> Passer en
+            Français</a>
         </div>
 
       </div>
