--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -42,8 +42,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
-          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="explore_fr.html"><img
-              src="assets/french flag.jpg" alt="French flag to switch the language" width="20" height="20"> Passer en
+          <a style="margin-left: 370px" id="switchLang" class="btn btn-link" lang="en" hreflang="en"
+            href="explore_fr.html"><img src="assets/french flag.jpg" alt="French flag to switch the language" width="20"
+              height="20"> Passer en
             Français</a>
         </ul>
         <div>
