--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -53,8 +53,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
-          <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img
-              src="assets/british flag.png" alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch
+          <a style="margin-left: 300px" id="switchLang" class="btn btn-link" lang="fr" hreflang="fr"
+            href="index.html"><img src="assets/british flag.png" alt="Drapeau anglais pour changer la langue" width="20"
+              height="20"> Switch
             to English</a>
         </ul>
         <div>
