--- a/mr4a11y/retranscription.html
+++ b/mr4a11y/retranscription.html
@@ -47,7 +47,7 @@
                 </ul>
                 <!--
                 <div>
-                    <a class="btn btn-link" lang="fr" hreflang="fr" href="sources.html"><img
+                    <a class="btn btn-link" id="switchLang" lang="fr" hreflang="fr" href="sources.html"><img
                             src="assets/british flag.png" alt="Drapeau anglais pour changer la langue" width="20"
                             height="20"> Switch to English</a>
                 </div>
