--- a/mr4a11y/sources.html
+++ b/mr4a11y/sources.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
         <!---<div>
-          <a class="btn btn-link" lang="fr" hreflang="fr" href="sources.html"><img src="assets/british flag.png"
+          <a class="btn btn-link" id="switchLang" lang="fr" hreflang="fr" href="sources.html"><img src="assets/british flag.png"
               alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch to English</a>
         </div>-->
       </div>
