--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -141,8 +141,9 @@
                 movement and the direction of movement needed for interaction.
               </li>
             </ul>
+            <br>
             <div id="use-case">
-              <h1>Example Of a Use Case</h1>
+              <h1>Video Content</h1>
               <div>There is potential for people with particular vision impairments,
                 such as Stargardt's disease (a reduction in the central detailed vision)
                 to see images more clearly using VR. This video shows how a woman was able
