--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -67,9 +67,9 @@
               The team is composed of three students in Master 2 - Human-Machine Interface Specialty :
               <br>
               <ul>
-                <li> <b>CABASSON Guillaume</b></li>
-                <li> <b>LAHOUAR Ibrahim</b></li>
-                <li> <b>LEMIERE Camille</b>
+                <li> <strong>CABASSON Guillaume</strong></li>
+                <li> <strong>LAHOUAR Ibrahim</strong></li>
+                <li> <strong>LEMIERE Camille</strong></b>
               </ul>
               <br>
               This site was created as part of the Ergonomics and Human Factors for Accessibility course.
@@ -85,17 +85,18 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="name">Name <i> *</i></label>
-          <input type="text" class="form-control" id="name">
+          <input aria-required="true" type="text" class="form-control" id="name">
         </div>
         <div class="form-group col-md-6">
           <label for="inputEmail">Email <i> *</i></label>
-          <input type="email" class="form-control" id="inputEmail">
+          <input aria-required="true" type="email" class="form-control" id="inputEmail">
           <small>example@example.com</small>
         </div>
       </div>
       <div class="form-group">
         <label for="Message">Message <i> *</i></label>
-        <textarea id="message" name="message" placeholder="Write something..." style="height:170px"></textarea>
+        <textarea aria-required="true" id="message" name="message" placeholder="Write something..."
+          style="height:170px"></textarea>
         <small> <i>*</i> Required Field</small>
       </div>
       </div>
