--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -82,17 +82,19 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="name">Nom <i> *</i></label>
-          <input type="text" class="form-control" id="name">
+          <input aria-required="true" type="text" class="form-control" id="name">
         </div>
         <div class="form-group col-md-6">
           <label for="inputEmail">Email <i> *</i></label>
-          <input type="email" class="form-control" id="inputEmail" aria-describedby="help_email_format">
+          <input aria-required="true" type="email" class="form-control" id="inputEmail"
+            aria-describedby="help_email_format">
           <small id="help_email_format">exemple@exemple.com</small>
         </div>
       </div>
       <div class="form-group">
         <label for="Message">Message <i> *</i></label>
-        <textarea id="message" name="message" placeholder="Tapez un mot..." style="height:170px"></textarea>
+        <textarea aria-required="true" id="message" name="message" placeholder="Tapez un mot..."
+          style="height:170px"></textarea>
         <small> <i>*</i> Champs Obligatoires</small>
       </div>
       </div>
