--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -38,14 +38,14 @@
             <a class="nav-link" href="explore.html">LEARN MORE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">CONTACT US</a>
+            <a class="nav-link" href="Contact.html">CONTACT US</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" id="switchLang" lang="en" hreflang="en" href="contact_fr.html"><img
+          <a class="btn btn-link" id="switchLang" lang="en" hreflang="en" href="Contact_fr.html"><img
               src="assets/french flag.jpg" alt="French flag to switch the language" width="20" height="20"> Passer en
             Français</a>
         </div>
