--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -39,14 +39,14 @@
             <a class="nav-link" href="explore_fr.html">EN SAVOIR PLUS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact_fr.html">NOUS CONTACTER</a>
+            <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" id="switchLang" lang="fr" hreflang="fr" href="contact.html"><img
+          <a class="btn btn-link" id="switchLang" lang="fr" hreflang="fr" href="Contact.html"><img
               src="assets/british flag.png" alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch
             to English</a>
         </div>
