--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="explore.html">LEARN MORE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">CONTACT US</a>
+            <a class="nav-link" href="Contact.html">CONTACT US</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sources.html">SOURCES</a>
