--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -48,15 +48,14 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="contact_fr.html">NOUS CONTACTER</a>
+            <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
           <a style="margin-left: 300px" id="switchLang" class="btn btn-link" lang="fr" hreflang="fr"
             href="index.html"><img src="assets/british flag.png" alt="Drapeau anglais pour changer la langue" width="20"
-              height="20"> Switch
-            to English</a>
+              height="20"> Switch to English</a>
         </ul>
         <div>
           <form class="form-inline my-2 my-lg-0" role="search">
