index video content description

--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -144,11 +144,8 @@
             <br>
             <div id="use-case">
               <h1>Video Content</h1>
-              <div>There is potential for people with particular vision impairments,
-                such as Stargardt's disease (a reduction in the central detailed vision)
-                to see images more clearly using VR. This video shows how a woman was able
-                to use Near Sighted VR Augmented Aid to see her grandchild more clearly, after eight years with limited
-                vision.
+              <div>Here is a video shot in Narbonne during a somewhat special day: day to raise awareness of high school
+                students on disabilities and accessibility.
               </div>
               <div class="iframe-container">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KPbD3lm5vao?start=9"
