--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -147,7 +147,8 @@
             <br>
             <div id="use-case">
               <h1>Contenu vidéo</h1>
-              <div>Voici
+              <div>Voici une vidéo tournée à Narbonne durant une journée un peu spéciale : journée de sensibilisation
+                des lycéens aux handicaps et à l’accessibilité.
               </div>
               <div class="iframe-container">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KPbD3lm5vao?start=9"
