--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -81,7 +81,9 @@
 
     <br>
     <form id="form">
-      <h2>Contact Us</h2>
+      <h2>Contact Us</h2><br>
+      For any comment, remark, or contact request, please complete and validate the following form:
+      <br><br>
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="name">Name <i> *</i></label>
