--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -78,7 +78,9 @@
 
     <br>
     <form id="form">
-      <h2>Nous Contacter</h2>
+      <h2>Nous Contacter</h2><br>
+      Pour tout commentaire, remarque, ou demande de contact, veuillez remplir et valider le formulaire suivant :
+      <br><br>
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="name">Nom <i> *</i></label>
