--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -130,7 +130,7 @@
   <footer role="contentinfo" tabindex="0">
     <div id="footer">
       <span>@2022 </span>
-      <img src="assets/univ_lorraine.png" alt="Lorraine University" width="150" height="55">
+      <img src="assets/univ_lorraine.png" alt="Lorraine University Logo" width="150" height="55">
       <span>Human Computer Interaction </span>
     </div>
   </footer>
