--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -171,7 +171,7 @@
   <footer role="contentinfo" tabindex="0">
     <div id="footer">
       <span>@2022 </span>
-      <img src="assets/univ_lorraine.png" alt="Université de Lorraine" width="150" height="55">
+      <img src="assets/univ_lorraine.png" alt="Logo de l'Université de Lorraine" width="150" height="55">
       <span>Interaction Humain Machine </span>
     </div>
   </footer>
