--- a/accessibilite/index.html
+++ b/accessibilite/index.html
@@ -1,37 +1,179 @@
-<!doctype html>
-<html lang="fr">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <meta>
-    <title>L'Education et l'accessibilité</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Education.png">
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
+  <title>Home</title>
 </head>
 
 <body>
-    <header role="banner">
-        <div id="title">L'Accessibilité dans l'éducation</div>
-        <ul>
-            <li><a href="#home">Homeuu</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li id="about"><a class="active" href="#about">About</a></li>
+  <header style="background-color: #f4f4f4" role="banner">
+    <nav role="navigation" aria-label="Main Menu" class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
+      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Website Logo (Back
+        to Home)">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              HOME
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#intro">Introduction</a>
+              <a class="dropdown-item" href="#use-case">Media</a>
+            </div>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="explore.html">LEARN MORE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Contact.html">CONTACT US</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sources.html">SOURCES</a>
+          </li>
+          <a style="margin-left: 370px" id="switchLang" class="btn btn-link" lang="en" hreflang="en"
+            href="index_fr.html"><img src="assets/french flag.jpg" alt="French flag to switch the language" width="20"
+              height="20"> Passer en
+            Français</a>
         </ul>
-    </header>
-
-    <nav role="navigation">
-
+        <div>
+          <form class="form-inline my-2 my-lg-0" role="search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Enter Search Terms" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Search</button>
+          </form>
+        </div>
+      </div>
     </nav>
+  </header>
 
-    <main role="main">
+  <main role="main">
+    <div id="slider">
+      <div id="headerSlider" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#headerSlider" data-slide-to="0" class="active"></li>
+          <li data-target="#headerSlider" data-slide-to="1"></li>
+          <li data-target="#headerSlider" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/image_edu1.jpeg" class="d-block w-100" alt="First image slide of a handcap using VR">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/image_edu2.jpeg" class="d-block w-100" alt="Second image slide of a kid playing with VR">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/image_edu3.jpeg" class="d-block w-100"
+              alt="Third image slide of videos games for wheelchaired">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#headerSlider" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#headerSlider" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
 
-    </main>
+    <div class="container">
+      <div class="row">
+        <div class="col" tabindex="0">
+          <div id="intro">
+            <h1>Introduction</h1>
+            <span>Augmented Reality and Virtual Reality are similar in many ways,
+              both help us creating artificial digital worlds and allowing the user to interact with it.
+              The acronyms AR and VR have been used in many conversations
+              in the technology industry for the past few years,
+              and you may or may not know what they stand for or the power that
+              they deliver over how we engage with personal devices and the real world.
+              <span> Mixed Reality (AR)</span> is a technology that combines
+              a virtual world that creates a realistic environment for users and mainly gamers
+              to interact with the real world in the form of live videos that are digitally
+              enhanced with graphics. Current augmented reality applications
+              in e-commerce allow users to see what a retailer’s furniture will
+              look like in their room and in gaming allow users to interact
+              with their environment with characters that appear through the camera using GPS integration.
+              Like <a href="https://www.ikea.com">IKEA</a> for example who has launched a new augmented reality
+              application that allows users to test their products from the comfort of their homes.
 
-    <footer role="contentinfo">
+            </span>
+            <div id="img">
+              <img class="img-responsive" src="assets/IKEA_augmented_reality.jpeg"
+                alt="IKEA'S augmented reality fourniture using smart devices">
+            </div>
+            When designing an application that uses augmented reality,
+            <a href="http://thingsentertainment.net">Things Entertainment</a> suggests these accessibility guidelines to
+            keep users with physical disabilities in mind:
+            <ul>
+              <li> <b> Spatial or Positional Sound Effects:</b>
+                creating sounds that mimic the location of augmented objects allow
+                users with mobility impairments to locate objects without requiring movement. </li>
+              <li><b>Adjustable Location of Augmented Reality Objects:</b>
+                allowing users to move the augmented object that they are
+                required to interact prevents users from requiring movement such as reaching,
+                bending, or accessing areas that are restricted to wheelchair users.
+              </li>
+              <li> <b> Avoid Space Conflicts: </b>
+                allowing augmented objects to be unfixed forms increase options in the type of movement, the angle of
+                movement and the direction of movement needed for interaction.
+              </li>
+            </ul>
+            <br>
+            <div id="use-case">
+              <h1>Video Content</h1>
+              <div>Here is a video shot in Narbonne during a somewhat special day: day to raise awareness of high school
+                students on disabilities and accessibility.
+              </div>
+              <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KPbD3lm5vao?start=9"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen title="Video on disability awareness for young high school students in Narbonne
+                  "></iframe>
+              </div>
+              <div>
+                <a class="nav-link" href="retranscription.html">The english retranscription is not available. Do you
+                  want to see the french retranscription ?</a>
+              </div>
+            </div>
+          </div>
 
-    </footer>
+        </div>
+      </div>
+    </div>
+  </main>
 
+
+  <footer role="contentinfo" tabindex="0">
+    <div id="footer">
+      <span>@2022 </span>
+      <img src="assets/univ_lorraine.png" alt="Lorraine University Logo" width="150" height="55">
+      <span>Human Computer Interaction </span>
+    </div>
+  </footer>
 </body>
 
 </html>
