--- a/accessibilite/sources.html
+++ b/accessibilite/sources.html
@@ -74,6 +74,13 @@
             href="https://www.thalesgroup.com/fr/worldwide/groupe/press-release/thales-et-le-centich-deploient-grande-echelle-la-solution-eyeschool"
             style="text-align: center; ">thalesgroup.com -> Thalès et le CENTICH déploient à grande échelle la
             solution Eyeschool dans 4 régions françaises</a></h2>
+        <h2 class="sources"><a href="https://handicap.gouv.fr/une-rentree-scolaire-2021-pour-tous"
+            style="text-align: center; ">handicap.gouv.fr/ -> Une rentrée scolaire 2021 pour tous</a></h2>
+        <h2 class="sources"><a
+            href="https://publication.enseignementsup-recherche.gouv.fr/eesr/FR/T243/les_etudiants_en_situation_de_handicap_dans_l_enseignement_superieur/#:~:text=14-,les%20%C3%A9tudiants%20en%20situation%20de%20handicap%20dans%20l%27enseignement%20sup%C3%A9rieur,multipli%C3%A9s%20par%205%20depuis%202005"
+            style="text-align: center; ">publication.enseignementsup-recherche.gouv.fr -> État de l'Enseignement
+            supérieur, de la Recherche et de l'Innovation en France n°14</a></h2>
+        <br>
       </section>
     </main>
 
