Ajout contenu accueil

--- a/accessibilite/index.html
+++ b/accessibilite/index.html
@@ -103,45 +103,16 @@
         <div class="col" tabindex="0">
           <div id="intro">
             <h1>Introduction</h1>
-            <span>Augmented Reality and Virtual Reality are similar in many ways,
-              both help us creating artificial digital worlds and allowing the user to interact with it.
-              The acronyms AR and VR have been used in many conversations
-              in the technology industry for the past few years,
-              and you may or may not know what they stand for or the power that
-              they deliver over how we engage with personal devices and the real world.
-              <span> Mixed Reality (AR)</span> is a technology that combines
-              a virtual world that creates a realistic environment for users and mainly gamers
-              to interact with the real world in the form of live videos that are digitally
-              enhanced with graphics. Current augmented reality applications
-              in e-commerce allow users to see what a retailer’s furniture will
-              look like in their room and in gaming allow users to interact
-              with their environment with characters that appear through the camera using GPS integration.
-              Like <a href="https://www.ikea.com">IKEA</a> for example who has launched a new augmented reality
-              application that allows users to test their products from the comfort of their homes.
-
+            <span>During the start of the 2021 school year in France, 400,000 children with disabilities returned to ordinary primary and secondary schools (from kindergarten to high school). In 2019, 37,502 students with disabilities were identified, i.e. 1.69% of the student population. These figures are continuously increasing, an encouraging development for the future. Indeed, it is always complicated for a person with a disability to follow a traditional schooling due to the lack of infrastructure and means helping them to be autonomous. This is why few of them continue their studies after secondary education. In order for everyone to have a chance, it is imperative to do everything possible to make education fully accessible, and this involves a lot of digital technology.
             </span>
             <div id="img">
-              <img class="img-responsive" src="assets/IKEA_augmented_reality.jpeg"
-                alt="IKEA'S augmented reality fourniture using smart devices">
+              <img class="img-responsive" src="assets/cned.png"
+                alt="Child studying remotely using a computer">
             </div>
-            When designing an application that uses augmented reality,
-            <a href="http://thingsentertainment.net">Things Entertainment</a> suggests these accessibility guidelines to
-            keep users with physical disabilities in mind:
-            <ul>
-              <li> <b> Spatial or Positional Sound Effects:</b>
-                creating sounds that mimic the location of augmented objects allow
-                users with mobility impairments to locate objects without requiring movement. </li>
-              <li><b>Adjustable Location of Augmented Reality Objects:</b>
-                allowing users to move the augmented object that they are
-                required to interact prevents users from requiring movement such as reaching,
-                bending, or accessing areas that are restricted to wheelchair users.
-              </li>
-              <li> <b> Avoid Space Conflicts: </b>
-                allowing augmented objects to be unfixed forms increase options in the type of movement, the angle of
-                movement and the direction of movement needed for interaction.
-              </li>
-            </ul>
-            <br>
+            Nowadays, many things are done on the computer: registrations, access to courses, transcripts, etc., a phenomenon that has been expanding rapidly since the COVID-19 crisis. With distance learning courses, it is enough that a single website or software used is not accessible to penalize the entire education of a student with a disability.
+            There are many tools that are already little known to help people with disabilities to use digital tools, but there are also specialized tools in education. Indeed, it can be complicated for a student with a hearing or visual impairment to follow a course like the others. With the advancement in technology, it seems obvious that it can be used so that everyone can take the course without prejudice.
+            <br/>
+            <br/>
             <div id="use-case">
               <h1>Video Content</h1>
               <div>Here is a video shot in Narbonne during a somewhat special day: day to raise awareness of high school
