--- a/accessibilite/index_fr.html
+++ b/accessibilite/index_fr.html
@@ -104,47 +104,18 @@
         <div class="col" tabindex="0">
           <div id="intro">
             <h1>Introduction</h1>
-            <span>Les acronymes AR et VR ont été lancés dans de nombreuses conversations
-              dans l'industrie de la technologie depuis quelques années,
-              et vous pouvez ou non savoir ce qu'ils représentent ou le pouvoir que
-              ils auront sur la façon dont nous interagissons avec les appareils personnels et le monde.
-              <span>Réalité augmentée (RA)</span>
-              est une technologie qui combine la réalité virtuelle,
-              un monde virtuel qui crée un environnement réaliste pour les utilisateurs et les joueurs
-              d'interagir avec, avec le monde réel sous la forme d'images vidéo en direct qui sont numériquement
-              amélioré avec des graphiques. Applications de réalité augmentée actuelles
-              dans le commerce électronique, permettre aux utilisateurs de voir ce que les meubles d'un détaillant
-              feront
-              ressemblent à dans leur chambre et dans les jeux permettent aux utilisateurs d'interagir
-              avec leur environnement avec des caractères qui apparaissent à travers l'appareil photo à l'aide de
-              l'intégration GPS.
-              Comme <a href="https://www.ikea.com">IKEA</a> par exemple qui a lancé une nouvelle application de réalité
-              augmentée qui permet aux utilisateurs de tester leurs produits dans le confort de leur foyer.
-
+            <span>Lors de la rentrée scolaire 2021, c’est 400 000 enfants en situation de handicap qui ont fait leur rentrée dans les établissements scolaires ordinaires du premier et second degré (de la maternelle au lycée). En 2019, 37 502 étudiants en situation de handicape ont été recensés, soit 1,69 % de la population étudiante. Ces chiffres augmentent continuellement, une évolution encourageante pour l’avenir. En effet, il est toujours compliqué pour une personne en situation de handicap de suivre une scolarité classique dû au manque d'infrastructure et de moyen les aidant à être autonome. C’est pourquoi peu d’entre eux continuent leurs études après l'enseignement secondaire. Afin que tout le monde ait sa chance, il est impératif de tout mettre en œuvre pour rendre la scolarité totalement accessible, et cela passe beaucoup par le numérique.
             </span>
             <div id="img">
-              <img class="img-responsive" src="assets/IKEA_augmented_reality.jpeg" alt="
-            La salle de réalité augmentée d'IKEA utilisant des appareils intelligents">
+              <img class="img-responsive" src="assets/cned.png" alt="
+            Enfant étudiant à distance à l'aide d'un ordinateur">
             </div>
 
-            Lors de la conception d'une application utilisant la réalité augmentée,
-            <a href="http://thingsentertainment.net">Things Entertainment</a> suggère des consignes d'accessibilité pour
-            garder à l'esprit les utilisateurs ayant un handicap physique:
-            <ul>
-              <li> <b>Effets sonores spatiaux ou positionnels:</b>
-
-                créer des sons qui imitent l'emplacement des objets augmentés permettent
-                les utilisateurs à mobilité réduite pour localiser des objets sans nécessiter de mouvement. </li>
-              <li><b>Emplacement ajustable des objets de réalité augmentée:</b>
-                permettant aux utilisateurs de déplacer l'objet augmenté qu'ils sont
-                requis pour interagir empêche les utilisateurs d'exiger des mouvements tels que l'atteinte,
-                se pencher ou accéder aux zones réservées aux utilisateurs de fauteuils roulants.
-              </li>
-              <li> <b> Évitez les conflits spatiaux: </b>
-                permettant aux objets augmentés d'être des formes non fixées, augmentez les options dans le type de
-                mouvement, l'angle de mouvement et la direction du mouvement nécessaire pour l'interaction. </li>
-            </ul>
-            <br>
+            De nos jours, beaucoup de choses se font sur ordinateur : les inscriptions, l'accès aux cours, aux relevés de notes etc, phénomène en grande expansion depuis la crise du COVID-19. Avec les cours à distance, il suffit qu’un seul site WEB ou logiciel utilisé ne soit pas accessible pour pénaliser toute la scolarité d’un élève en situation de handicap. 
+            Il existe de nombreux outils déjà peu connus d’aides aux personnes en situation de handicap afin d’utiliser les outils numériques, mais il existe aussi des outils spécialisés dans l’éducation. En effet, il peut être compliqué pour un élève souffrant d’handicap auditif ou visuel de suivre un cours comme les autres. Avec les progrès de la technologie, il semble évident que celle-ci peut être utilisée afin que chacun puisse suivre le cours sans préjudice.
+            
+            <br/>
+            <br/>
             <div id="use-case">
               <h1>Contenu vidéo</h1>
               <div>Voici une vidéo tournée à Narbonne durant une journée un peu spéciale : journée de sensibilisation
