--- a/accessibilite/Contact_fr.html
+++ b/accessibilite/Contact_fr.html
@@ -64,9 +64,9 @@
               L'équipe est composée de trois étudiants en Master 2 - Spécialité Interface Humain-Machine :
               <br>
               <ul>
-                <li> <b>CABASSON Guillaume</b></li>
-                <li><b>LAHOUAR Ibrahim</b></li>
-                <li> <b>LEMIERE Camille</b>
+                <li> <strong>CABASSON Guillaume</strong></li>
+                <li> <strong>LAHOUAR Ibrahim</strong></li>
+                <li> <strong>LEMIERE Camille</strong></li>
               </ul>
               <br>
               Ce site a été réalisé dans le cadre du cours d'Ergonomie et Facteurs Humains pour l'Accessibilité.
