--- a/accessibilite/sources.html
+++ b/accessibilite/sources.html
@@ -54,7 +54,7 @@
     <main role="main">
       <section id="blog" tabindex="0">
         <h1>Sources</h1>
-        <h2 class="sources"><a
+        <h2><a class="sources"
             href="https://www.education.gouv.fr/la-scolarisation-des-eleves-en-situation-de-handicap-1022#:~:text=Le%20droit%20%C3%A0%20l'%C3%A9ducation%20pour%20tous%20les%20enfants%2C%20qu,handicap%2C%20est%20un%20droit%20fondamental.&text=L'%C3%A9l%C3%A8ve%20en%20situation%20de%20handicap%20est%20un%20%C3%A9l%C3%A8ve%20comme,%C3%AAtre%20soumis%20aux%20m%C3%AAmes%20exigences"
             style="text-align: center; ">education.gouv -> La scolarisation des élèves en situation de handicap</a>
         </h2>
