--- a/accessibilite/sources.html
+++ b/accessibilite/sources.html
@@ -58,25 +58,25 @@
             href="https://www.education.gouv.fr/la-scolarisation-des-eleves-en-situation-de-handicap-1022#:~:text=Le%20droit%20%C3%A0%20l'%C3%A9ducation%20pour%20tous%20les%20enfants%2C%20qu,handicap%2C%20est%20un%20droit%20fondamental.&text=L'%C3%A9l%C3%A8ve%20en%20situation%20de%20handicap%20est%20un%20%C3%A9l%C3%A8ve%20comme,%C3%AAtre%20soumis%20aux%20m%C3%AAmes%20exigences"
             style="text-align: center; ">education.gouv -> La scolarisation des élèves en situation de handicap</a>
         </h2>
-        <h2 class="sources"><a
+        <h2><a class="sources"
             href="https://www.education.gouv.fr/accessibilite-numerique-le-cned-et-le-fiphfp-s-engagent-1790"
             style="text-align: center; ">education.gouv -> Accessibilité numérique : le CNED et le FIPHFP
             s'engagent</a>
         </h2>
-        <h2 class="sources"><a
+        <h2><a class="sources"
             href="https://www.onisep.fr/Formation-et-handicap/Se-faire-accompagner/Handicap-et-vie-quotidienne/L-acces-au-numerique-pour-tous#:~:text=Les%20ressources%20num%C3%A9riques%20sont%20devenues,scolaire%20et%20l%27insertion%20professionnelle"
             style="text-align: center; ">onisep.fr -> L'accès au numérique pour tous</a></h2>
-        <h2 class="sources"><a href="https://vimeo.com/151028546" style="text-align: center; ">vimeo.com -> Eyeschool
+            <h2><a class="sources" href="https://vimeo.com/151028546" style="text-align: center; ">vimeo.com -> Eyeschool
             film de 5 minutes</a></h2>
-        <h2 class="sources"><a href="http://www.eyeschool.fr/" style="text-align: center; ">http://www.eyeschool.fr/</a>
+            <h2><a class="sources" href="http://www.eyeschool.fr/" style="text-align: center; ">http://www.eyeschool.fr/</a>
         </h2>
-        <h2 class="sources"><a
+        <h2><a class="sources"
             href="https://www.thalesgroup.com/fr/worldwide/groupe/press-release/thales-et-le-centich-deploient-grande-echelle-la-solution-eyeschool"
             style="text-align: center; ">thalesgroup.com -> Thalès et le CENTICH déploient à grande échelle la
             solution Eyeschool dans 4 régions françaises</a></h2>
-        <h2 class="sources"><a href="https://handicap.gouv.fr/une-rentree-scolaire-2021-pour-tous"
+            <h2><a class="sources" href="https://handicap.gouv.fr/une-rentree-scolaire-2021-pour-tous"
             style="text-align: center; ">handicap.gouv.fr/ -> Une rentrée scolaire 2021 pour tous</a></h2>
-        <h2 class="sources"><a
+            <h2><a class="sources"
             href="https://publication.enseignementsup-recherche.gouv.fr/eesr/FR/T243/les_etudiants_en_situation_de_handicap_dans_l_enseignement_superieur/#:~:text=14-,les%20%C3%A9tudiants%20en%20situation%20de%20handicap%20dans%20l%27enseignement%20sup%C3%A9rieur,multipli%C3%A9s%20par%205%20depuis%202005"
             style="text-align: center; ">publication.enseignementsup-recherche.gouv.fr -> État de l'Enseignement
             supérieur, de la Recherche et de l'Innovation en France n°14</a></h2>
