--- a/accessibilite/Contact.html
+++ b/accessibilite/Contact.html
@@ -97,7 +97,7 @@
       </div>
       <div class="form-group">
         <label for="Message">Message <i> *</i></label>
-        <textarea aria-required="true" id="message" name="message" placeholder="Write something..."
+        <textarea aria-label="Write" aria-required="true" id="message" name="message" placeholder="Write something..."
           style="height:170px"></textarea>
         <small> <i>*</i> Required Field</small>
       </div>
