--- a/accessibilite/Contact_fr.html
+++ b/accessibilite/Contact_fr.html
@@ -95,7 +95,7 @@
       </div>
       <div class="form-group">
         <label for="Message">Message <i> *</i></label>
-        <textarea aria-required="true" id="message" name="message" placeholder="Tapez un mot..."
+        <textarea aria-label="Ecrivez" aria-required="true" id="message" name="message" placeholder="Tapez un mot..."
           style="height:170px"></textarea>
         <small> <i>*</i> Champs Obligatoires</small>
       </div>
