--- a/accessibilite/Contact.html
+++ b/accessibilite/Contact.html
@@ -103,7 +103,7 @@
       </div>
       </div>
       </div>
-      <button type="submit" class="btn btn-primary">Send</button>
+      <button id="envoyer" type="submit" class="btn btn-primary">Send</button>
     </form>
   </main>
 
