--- a/accessibilite/Contact_fr.html
+++ b/accessibilite/Contact_fr.html
@@ -101,7 +101,7 @@
       </div>
       </div>
       </div>
-      <button type="submit" class="btn btn-primary">Envoyer</button>
+      <button id="envoyer" type="submit" class="btn btn-primary">Envoyer</button>
     </form>
   </main>
 
