--- a/accessibilite/Contact_fr.html
+++ b/accessibilite/Contact_fr.html
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="Message">Message <i> *</i></label>
+        <label for="message">Message <i> *</i></label>
         <textarea aria-label="Ecrivez" aria-required="true" id="message" name="message" placeholder="Tapez un mot..."
           style="height:170px"></textarea>
         <small> <i>*</i> Champs Obligatoires</small>
