--- a/accessibilite/retranscription.html
+++ b/accessibilite/retranscription.html
@@ -54,6 +54,7 @@
                 -->
             </div>
         </nav>
+    </header>
         <main role="main">
             <div class="container">
                 <div class="row">
@@ -93,7 +94,7 @@
                                 une vie, tout le temps, dans une ville, sur différents terrains, ça doit vraiment pas
                                 être évident et franchement je les respecte.
                                 <br>Musique de fin, un lien reconduit sur le
-                                <a href="https://www.narbonne.fr">site de la ville de Narbonne</a>.
+                                <a class="sources" href="https://www.narbonne.fr">site de la ville de Narbonne</a>.
                                 <br><br>
                             </span>
                         </div>
@@ -110,7 +111,7 @@
             </div>
         </footer>
 
-    </header>
+    
 
 </body>
 
