--- a/accessibilite/retranscription.html
+++ b/accessibilite/retranscription.html
@@ -94,7 +94,7 @@
                                 une vie, tout le temps, dans une ville, sur différents terrains, ça doit vraiment pas
                                 être évident et franchement je les respecte.
                                 <br>Musique de fin, un lien reconduit sur le
-                                <a class="sources" href="https://www.narbonne.fr">site de la ville de Narbonne</a>.
+                                <a class="link" href="https://www.narbonne.fr">site de la ville de Narbonne</a>.
                                 <br><br>
                             </span>
                         </div>
